--- a/VRChat/58/1159758.html
+++ b/VRChat/58/1159758.html
@@ -75,9 +75,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "PtxAA0wfTrLQXFsdMXEGd/ytQivFriLC5qjhqY5J+5U="></script>
+    "igZR8kOdkUiJoJH+uAHrSBeo2RPHcsesJ0OsP/CL1Es="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"シャルロット写真集 Vol.1","description":"Kakkoii（カッコいい）を求め、布教するHigrashiによるシャーロ改変アバター「シャルロット＝レッドグレイヴ」のVRChat写真集。\n今回はイベント「Virtual Collection Stage0 仮想人形乱舞活劇」で使われたワールドだけで撮影。\n得物を持ち出し、本格的にKakkoiiとアクションの撮影に入りました。どこかストーリー仕立てに見えます。\n写真総数は55枚。約120MBあります。","url":"https://booth.pm/ja/items/1159758","offers":{"priceCurrency":"JPY","@type":"Offer","price":"0"},"image":"https://booth.pximg.net/c/620x620/293876ef-983d-4aaf-9509-0b1beae881cf/i/1159758/079c2d4d-1d09-472a-814f-2fdfc2e8de4f_base_resized.jpg"}
     </script>
@@ -91,7 +91,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="PtxAA0wfTrLQXFsdMXEGd/ytQivFriLC5qjhqY5J+5U="></script>
+    nonce="igZR8kOdkUiJoJH+uAHrSBeo2RPHcsesJ0OsP/CL1Es="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -115,6 +115,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -159,7 +161,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/1159758/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               38
@@ -174,14 +176,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/1159758/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               38
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
