--- a/VRChat/38/1158438.html
+++ b/VRChat/38/1158438.html
@@ -76,9 +76,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "mijFUX8306yGSU6k2Zv0DDzb58dagOnuaG1XzpcZ8aU="></script>
+    "NT6zmTbvb4L7XDgw/rU0zlU9C8yh5TEPURx7BWhjocc="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"Itsune Elaine - Humanoid Rigged - FBX + UnityPackage","description":"Original 3D model Character \"Itsune Elaine\"\na Half Yokai and Human Human \n\nit is a Humanoid 3D Character with full humanoid Rig set up to be used for Games Character Assets or you can use it for VRchat but you need some adjustment for that.\n\n● Contents\n\n01. FBX File Data.\n02. All Texture data for the characters.\n03. UnityPackage Data Humanoid Setup\n● About Commercial Use\n\n* This model is made and design for a Game   Character Assets but it also can be used for Animation/Video/Vrchat/Images. \n\n** you are free to use this model for any commercial game project but please inform me if you use it for commercial purpose and you can just put my name in you credits i'll be appreciate it so much for it.\n\n\n● End of User Term\n\n- please don't redistribute this model in public.\n\n- you may modified this model ,but you can not redistribute the modified model in to public. \n\n\nSketchfab 3D View : https://sketchfab.com/models/9a13a5e054324f05bd541c3ac2808750\n\n● Contacts\nTwitter : https://twitter.com/Arunorudo_Rui\nFaceBook : https://www.facebook.com/IzgRui\n\n\n\n\n\n","url":"https://booth.pm/ja/items/1158438","offers":{"priceCurrency":"JPY","@type":"Offer","price":"2500"},"image":"https://booth.pximg.net/c/620x620/c4a853fe-13e0-42a7-be98-dc5cd74cd540/i/1158438/99cd379d-d659-4f7e-ad77-76d11c6552f1_base_resized.jpg"}
     </script>
@@ -92,7 +92,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="mijFUX8306yGSU6k2Zv0DDzb58dagOnuaG1XzpcZ8aU="></script>
+    nonce="NT6zmTbvb4L7XDgw/rU0zlU9C8yh5TEPURx7BWhjocc="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -116,6 +116,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -155,10 +157,10 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/1158438/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
-                              1015
+                              1016
                             </div>
                           </div></a><a class=
                           "remove-from-wish-list no-underline !text-current"
@@ -170,14 +172,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/1158438/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
-                              1015
+                              1016
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
