--- a/VRChat/61/1154661.html
+++ b/VRChat/61/1154661.html
@@ -75,9 +75,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "y5PpNtiHYMzBBvjSG+JXndBtDr3YHn6SoTPNYmdWXhQ="></script>
+    "HDqq3dOOsNyEY7zYyk4wRUO2q4MN+drB3QYlSJZG75Q="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"【UnityPackage】十字架","description":"20分くらいで作った十字架です。シャーロちゃんのマフラーの先端につけて揺らすために作りました。\nテクスチャーはスタンダードシェーダー向けに書き出したもの（3枚）と2D Viewで書き出したもの（1枚）があり、Prefabをそれぞれ作っています。\nちなみに私はUTSを使う場合は2D Viewのテクスチャーを使っています。UTSで金属の質感の設定がワカラン...\n\n【仕様】\nポリゴン 3285\nマテリアル　1\nテクスチャー　3(1)\n\n【配布形式】\nUnityPackage\n\n【利用規約】\n商用利用、改変は可能です。\n二次配布、自作発言は禁止します。\nこの商品を利用したことで発生するトラブル等に関して責任を負いません。","url":"https://booth.pm/ja/items/1154661","offers":{"priceCurrency":"JPY","@type":"AggregateOffer","lowPrice":"0","highPrice":"100"},"image":"https://booth.pximg.net/c/620x620/da15b300-8632-4664-a059-a7e1fbad1afa/i/1154661/c91a38ec-5f0c-4be8-8fb9-0f8e2b0d683f_base_resized.jpg"}
     </script>
@@ -91,7 +91,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="y5PpNtiHYMzBBvjSG+JXndBtDr3YHn6SoTPNYmdWXhQ="></script>
+    nonce="HDqq3dOOsNyEY7zYyk4wRUO2q4MN+drB3QYlSJZG75Q="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -119,6 +119,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -162,7 +164,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/1154661/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               74
@@ -177,14 +179,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/1154661/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               74
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
