--- a/VRChat/94/1153594.html
+++ b/VRChat/94/1153594.html
@@ -101,9 +101,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "JLCIoZBc8peQUJHjeCeAdf+79iAe98YkBow3KFsvdFA="></script>
+    "RNyVD2zW2ZJCAoXnaTzCBlMmz6msqTKRwRYZlbWWdqo="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"【#VRoid】キラキラ瞳テクスチャ４色セット【正式版対応済】","description":"VRoid向けの、キラキラ瞳テクスチャ４色セットです。\nアニメキャラ風の目や、ユメカワ系のドリーミングな雰囲気、\n宇宙が見えそうな深い眼がお好きな方に。","url":"https://booth.pm/ja/items/1153594","offers":{"priceCurrency":"JPY","@type":"Offer","price":"0"},"image":"https://booth.pximg.net/c/620x620/e0c00f80-a6ee-49d6-8710-f6624f57e422/i/1153594/375a3d83-5cf7-455b-a995-2e8c16f181eb_base_resized.jpg"}
     </script>
@@ -114,7 +114,7 @@
     src="//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="JLCIoZBc8peQUJHjeCeAdf+79iAe98YkBow3KFsvdFA="></script>
+    nonce="RNyVD2zW2ZJCAoXnaTzCBlMmz6msqTKRwRYZlbWWdqo="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -141,6 +141,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -185,10 +187,10 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/1153594/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
-                              1266
+                              1268
                             </div>
                           </div></a><a class=
                           "remove-from-wish-list no-underline !text-current"
@@ -200,14 +202,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/1153594/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
-                              1266
+                              1268
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
