--- a/VRChat/39/1365639.html
+++ b/VRChat/39/1365639.html
@@ -75,9 +75,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "P8JpV/Tylvm5a/1+tAr2k3nIRm6mN/vvyYeKmQHxLKs="></script>
+    "k74nbDKbwPGjVTvwDdsZ1y82QP1e1uYhnGc2gN5XG/0="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"緑河印の安全ヘルメット v2.0","description":"これであなたもご安全に!\nまちちゃんがかぶっているヘルメットのアップグレード版です!\n\n＜緑河印の安全ヘルメット＞\n\n三角面数：738～830\n・内装2種類\n・ロゴマーク3種類\n・改変用メッシュ分割版\nが入っています。\n\nFBX形式(テクスチャ付き)・Unitypackage形式の両方が入っています。\n","url":"https://booth.pm/ja/items/1365639","offers":{"priceCurrency":"JPY","@type":"Offer","price":"200"},"image":"https://booth.pximg.net/c/620x620/4fc08508-1619-4946-948b-a529c8bbad4c/i/1365639/5baff735-ab68-4760-8fae-394dec7e4c86_base_resized.jpg"}
     </script>
@@ -91,7 +91,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="P8JpV/Tylvm5a/1+tAr2k3nIRm6mN/vvyYeKmQHxLKs="></script>
+    nonce="k74nbDKbwPGjVTvwDdsZ1y82QP1e1uYhnGc2gN5XG/0="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -115,6 +115,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -158,7 +160,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/1365639/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               80
@@ -173,14 +175,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/1365639/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               80
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
